# fixhs

./: .gitignore  Benchmark.hs  Main.hs  Makefile  README  README.md  Setup.hs  fix.cabal  fixhs.cabal
Benchmark/: Benchmark.hs  Makefile
Common/: FIXCoparser.hs  FIXMessage.hs  FIXParser.hs  FIXParserCombinators.hs  FIXTag.hs
Data/: Coparser.hs  LookupTable.hs
Data/FIX/: Arbitrary.hs  Common.hs  FIX40.hs  FIX41.hs  FIX42.hs  FIX43.hs  FIX44.hs
Data/FIX42/: Tags.hs
Socket/: ClientSocket.hs  Enumerator.hs
Test/: ExampleFixMessages.txt  ExampleFixMessages3.txt  FIXBidirectionalTest.hs  FIXCoparserTest.hs  FIXParserTest.hs
Utils/: Generator.hs
spec/: FIX41.xml  FIX42.xml  FIX43.xml  FIX44.xml
src/: Main.hs
src/Common/: FIXParser.hs  FIXParserCombinators.hs
src/Data/: Coparser.hs  LookupTable.hs
src/Data/FIX/: Arbitrary.hs  Common.hs  Coparser.hs  FIX40.hs  FIX41.hs  FIX42.hs  FIX43.hs  FIX44.hs  Message.hs  Parser.hs  ParserCombinators.hs
src/Data/FIX/Spec/: FIX40.hs  FIX41.hs  FIX42.hs  FIX43.hs  FIX44.hs
src/Socket/: ClientSocket.hs  Enumerator.hs
src/Utils/: Generator.hs
testsuite/benchmarks/: Benchmark.hs  Makefile
testsuite/tests/: Enumerator.hs  ExampleFixMessages3.txt  FIXBidirectionalTest.hs  FIXParserTest.hs  test.sh
