Name:                fix
Version:             0.0
Description:         FIX (co)parser
License:             GPL
Author:              foo
Maintainer:          foo
Build-Type:          Simple
Cabal-Version:       >=1.8

Library 
  Build-Depends:     base >= 3 && < 5, containers, bytestring, attoparsec, attoparsec-enumerator, enumerator, old-time, network, HaXml, deepseq, QuickCheck, parallel, text, dlist

  Exposed-modules:   Common.FIXCoparser Common.FIXParser Common.FIXMessage Data.LookupTable Data.FIX.Common Data.FIX.FIX42 
  ghc-options:       -fno-warn-missing-signatures -O -Wall -rtsopts 

Executable fix-parser
  Main-is:           Main.hs
  Build-Depends:     base >= 3 && < 5, fix, containers, bytestring, attoparsec, attoparsec-enumerator, enumerator, old-time, network, deepseq, QuickCheck
  ghc-options:       -Wall -O -rtsopts 

Executable fix-generator
  Main-is:           Utils/Generator.hs
  Build-Depends:     base >= 3 && < 5, fix, containers, bytestring, attoparsec, attoparsec-enumerator, enumerator, old-time, network, HaXml, deepseq, QuickCheck

