Name:                fix
Version:             0.1
Description:         FIX (co)parser
Synopsis:            FIX (co)parser
Category:            Protocol
License:             GPL
Author:              foo
Maintainer:          foo
Build-Type:          Simple
Cabal-Version:       >=1.8
License-File:        LICENSE
	
Source-Repository    head
  type:	    git
  location: http://github.com/urv/fixhs

Library 
  Build-Depends:     base >= 3 && < 5, containers, MissingH, bytestring, attoparsec, attoparsec-enumerator, enumerator, old-time, network, HaXml, deepseq, QuickCheck, parallel, text, dlist
  Other-modules:     Common.FIXParserCombinators  
  Exposed-modules:   Data.LookupTable Data.Coparser Common.FIXCoparser Common.FIXParser Common.FIXMessage Data.FIX.Common Data.FIX.FIX40 Data.FIX.FIX41 Data.FIX.FIX42 
  ghc-options:       -Wall -rtsopts -auto-all

Executable fix-generator
  Main-is:           Utils/Generator.hs
  Build-Depends:     base >= 3 && < 5, HaXml, MissingH, dlist, deepseq, text, bytestring, QuickCheck, containers, attoparsec, old-time
