name:                fixhs
version:             0.1
description:         FIX (co)parser
homepage:            http://github.com/urv/fixhs
synopsis:            FIX (co)parser
category:            Protocol, Text, Parsing
license:             GPL
license-file:        LICENSE
author:              Arvin Moezzi
maintainer:          Arvin Moezzi
build-type:          Simple
tested-with:         GHC == 7.0.3
cabal-version:       >=1.8
stability:           experimental

flag developer
  description: build in development mode
  default: False

library 
  hs-source-dirs:    src/
  build-depends:    
                     base >= 3 && < 5, 
                     containers, MissingH, bytestring, attoparsec, 
                     attoparsec-enumerator, enumerator, old-time, network, 
                     HaXml, deepseq, QuickCheck, parallel, text, dlist
  other-modules:     
                     Common.FIXParserCombinators
  exposed-modules:   
                     Data.LookupTable 
                     Data.Coparser 
                     Data.FIX.Arbitrary 
                     Data.FIX.Common 
                     Data.FIX.FIX42 
                     Common.FIXCoparser 
                     Common.FIXParser 
                     Common.FIXMessage 
  ghc-options:       -Wall 
  if flag(developer)
    ghc-prof-options: -auto-all

Executable fix-generator
  hs-source-dirs:    src/
  Main-is:           Utils/Generator.hs
  Build-Depends:     
                     base >= 3 && < 5, 
                     HaXml, MissingH, old-time, dlist, attoparsec, 
                     containers, QuickCheck, deepseq, text, bytestring

source-repository head
  type:     git
  location: http://github.com/urv/fixhs

