name:                fixhs
version:             0.1.3
description:         Financial Information eXchange (FIX) protocol (co)parser
homepage:            http://github.com/urv/fixhs
synopsis:            FIX (co)parser
category:            Protocol, Text, Parsing
license:             LGPL-2.1
license-file:        LICENSE
author:              Arvin Moezzi
maintainer:          Arvin Moezzi
build-type:          Simple
tested-with:         GHC == 7.0.3
cabal-version:       >=1.8
stability:           experimental

flag developer
  description: build in development mode
  default: False

flag with-fix40
  description: add fix40 to the module
  default: True

flag with-fix41
  description: add fix41 to the module
  default: True

flag with-fix42
  description: add fix42 to the module
  default: True

flag with-fix43
  description: add fix43 to the module. It takes a long time to compile!
  default: False

flag with-fix44
  description: add fix44 to the module. It takes a long time to compile!
  default: False

library 
  hs-source-dirs:    src/
  build-depends:    
                     base >= 3 && < 5, 
                     containers, MissingH, bytestring, attoparsec, 
                     attoparsec-enumerator, enumerator, old-time, network, 
                     HaXml, deepseq, QuickCheck, parallel, text, dlist
  other-modules:     
                     Data.FIX.ParserCombinators
  exposed-modules:   
                     Data.LookupTable 
                     Data.Coparser 
                     Data.FIX.Arbitrary 
                     Data.FIX.Common 
                     Data.FIX.Coparser 
                     Data.FIX.Parser 
                     Data.FIX.Message 
  ghc-options:       -Wall 
  if flag(developer)
    ghc-prof-options: -auto-all

  if flag(with-fix40) 
   exposed-modules: Data.FIX.Spec.FIX40 
  if flag(with-fix41) 
   exposed-modules: Data.FIX.Spec.FIX41 
  if flag(with-fix42) 
   exposed-modules: Data.FIX.Spec.FIX42 
  if flag(with-fix43) 
   exposed-modules: Data.FIX.Spec.FIX43 
  if flag(with-fix44) 
   exposed-modules: Data.FIX.Spec.FIX44 

Executable fix-generator
  hs-source-dirs:    src/
  Main-is:           Utils/Generator.hs
  Build-Depends:     
                     base >= 3 && < 5, 
                     HaXml, MissingH, old-time, dlist, attoparsec, 
                     containers, QuickCheck, deepseq, text, bytestring

source-repository head
  type:     git
  location: http://github.com/urv/fixhs

